Updated README and added comments

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title> Nedda Elsayed</title>
 </head>
 
-
+<!-- This is the header section -->
 <header class="header">
     <h1 class="my-name">Nedda</h1>
     <h1 class="my-last-name">Elsayed</h1><div>
@@ -29,7 +29,7 @@
 
 </header>
 
-
+<!-- This is the body section -->
 <body style="background-color: rgba(149, 213, 243, 0.966)">
     <section class="body">
         <div class="split left"><div class="positioning"><h2 class="body" id="About-Me">About Me</h2></div></div>
@@ -51,7 +51,7 @@
 
     <br clear="left">
 
-    </section class="img-body">
+</section class="img-body">
         <div class="split left"><h2 class="body" id="Work">Work</h2></div>
             <div class="split right">
                 <div class="scrollable">
@@ -90,94 +90,10 @@
     </section>
 </body>
 
-
+<!-- This is the footer section -->
 <footer class="footer">
 Made June 2023
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </html>
